[gd_scene load_steps=4 format=3 uid="uid://b5nvul8ordavc"]

[ext_resource type="Script" path="res://src/Scripts/scaffold.gd" id="1_v37gu"]
[ext_resource type="Texture2D" uid="uid://d33ifwm1aivhb" path="res://Assets/Sprites/checker_blue_32x.png" id="2_d5kjh"]
[ext_resource type="Texture2D" uid="uid://dr4p7qtoqm8dv" path="res://Assets/Sprites/checker_orange_32x.png" id="3_01n2k"]

[node name="Scaffold" type="Node2D"]
script = ExtResource("1_v37gu")

[node name="GrapplePoint" type="Node2D" parent="."]
position = Vector2(61, 0)

[node name="Graphics1" type="Sprite2D" parent="."]
visible = false
position = Vector2(61, 0)
scale = Vector2(4.8125, 1)
texture = ExtResource("2_d5kjh")

[node name="Graphics2" type="Sprite2D" parent="."]
visible = false
position = Vector2(61, 0)
scale = Vector2(4.8125, 1)
texture = ExtResource("3_01n2k")
